Basic speech to text

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,12 @@
     "background": {
         "service_worker": "background.js"
     },
+    "web_accessible_resources": [
+        {
+          "resources": ["images/mic.svg"],
+          "matches": ["<all_urls>"]
+        }
+    ],
     "content_scripts": [
         {
             "matches": [
