--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     },
     "web_accessible_resources": [
         {
-          "resources": ["images/mic.svg", "images/copy.svg"],
+          "resources": ["images/mic.svg", "images/copy.svg", "images/yes.svg", "images/mic-active.svg"],
           "matches": ["<all_urls>"]
         }
     ],
